tests/ui/typeck/duplicate_overloaded_items.stderr
error: invalid data location `storage`
  --> ROOT/tests/ui/typeck/duplicate_overloaded_items.sol:LL:CC
   |
LL | function f7(string storage) {}
   |             ^^^^^^^^^^^^^^
   |
   = note: data location must be `memory` or `calldata` for public function parameter, but got `storage`

error: aborting due to 1 previous error

